# news-backend

./: .dockerignore  .env  .env.local  .gitignore  Dockerfile  Makefile  crontab  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
news_crawl/news_crawl/: items.py  main.py  mixin.py  pipelines.py  settings.py
news_crawl/news_crawl/spiders/: mehr.py
src/: api.py  bus.py  config.py  handlers.py  models.py  redis_consumer.py  routes.py  scheduler.py  utils.py
